--- a/Blog using PERN stack/frontend/package.json
+++ b/Blog using PERN stack/frontend/package.json
@@ -1,6 +1,7 @@
 {
   "name": "frontend",
   "version": "0.1.0",
+  "proxy": "http://localhost:5000",
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.0",
@@ -11,11 +12,14 @@
     "@types/node": "^12.20.47",
     "@types/react": "^16.14.23",
     "@types/react-dom": "^16.9.14",
+    "@types/react-fontawesome": "^1.6.5",
     "@types/react-redux": "^7.1.23",
     "axios": "^0.26.0",
+    "font-awesome": "^4.7.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
     "typescript": "~4.1.5"
   },
@@ -39,5 +43,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-router-dom": "^5.3.3"
   }
 }
