--- a/Blog using PERN stack/frontend/package.json
+++ b/Blog using PERN stack/frontend/package.json
@@ -21,6 +21,7 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
+    "react-toastify": "^9.0.0",
     "typescript": "~4.1.5"
   },
   "scripts": {
